# navmesh-tools

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
src/: cdclient_db.cpp  cdclient_db.h  editor_window.cpp  editor_window.h  mset_writer.cpp  mset_writer.h  navmesh_editor.cpp  navmesh_gl_widget.cpp  navmesh_gl_widget.h  recast_builder.cpp  recast_builder.h  zone_geometry.cpp  zone_geometry.h
